fix install banner on mobile

--- a/src/assets/scss/components/promotion-banner.scss
+++ b/src/assets/scss/components/promotion-banner.scss
@@ -14,7 +14,14 @@
         background-color: #fff;
     }
 
-    p {
+    &__text {
         margin-right: 8px;
+        max-height: 56px;
+        overflow-y: scroll;
+
+        p {
+            margin: 0;
+            white-space: break-word;
+        }
     }
 }
